Import of ISHIGAKI/HTML-Filter-Callbacks-0.02 from CPAN.
gitpan-cpan-distribution: HTML-Filter-Callbacks
gitpan-cpan-version:      0.02
gitpan-cpan-path:         ISHIGAKI/HTML-Filter-Callbacks-0.02.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for HTML-Filter-Callbacks
 
+0.02 2009/12/05
+  - no code changes; just fixed a test
+
 0.01 2009/12/05
   - initial release
