Import of ISHIGAKI/HTML-Filter-Callbacks-0.04 from CPAN.
gitpan-cpan-distribution: HTML-Filter-Callbacks
gitpan-cpan-version:      0.04
gitpan-cpan-path:         ISHIGAKI/HTML-Filter-Callbacks-0.04.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for HTML-Filter-Callbacks
 
+0.04 2010/06/13
+  - ignore cases of tags
+
 0.03 2010/03/16
   - fixed empty tag handling
 
