Import of ISHIGAKI/HTML-Filter-Callbacks-0.05 from CPAN.
gitpan-cpan-distribution: HTML-Filter-Callbacks
gitpan-cpan-version:      0.05
gitpan-cpan-path:         ISHIGAKI/HTML-Filter-Callbacks-0.05.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for HTML-Filter-Callbacks
 
+0.05 2011/01/18
+  - allows coderef reuse (xaicron++)
+
 0.04 2010/06/13
   - ignore cases of tags
 
