Import of XAICRON/HTML-Filter-Callbacks-0.06 from CPAN.
gitpan-cpan-distribution: HTML-Filter-Callbacks
gitpan-cpan-version:      0.06
gitpan-cpan-path:         XAICRON/HTML-Filter-Callbacks-0.06.tar.gz
gitpan-cpan-author:       XAICRON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for HTML-Filter-Callbacks
 
+0.06 2011/07/05
+  - ignore cases fo attr (xaicron)
+
 0.05 2011/01/18
   - allows coderef reuse (xaicron++)
 
