--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for HTML-Filter-Callbacks
 
+0.07 2011/07/06
+  - fixed broken dist
+  - ignore cases of remove_attr and replace_attr (xaicron)
+
 0.06 2011/07/05
   - ignore cases fo attr (xaicron)
 
